--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit>=1.41.1
-requests>=2.32.3
-timezonefinder>=6.5.7
-datetime>=5.5
-pytz>=2024.2
-geopy>=2.4.1
-folium>=0.19.4
-streamlit-folium>=0.24.0
+pandas>=2.2.3
+numpy>=2.2.1
+seaborn>=0.13.2
+streamlet>=1.41.1
+openpyxl>=3.1.5
